--- a/app/styles/application.module.css
+++ b/app/styles/application.module.css
@@ -72,12 +72,10 @@ noscript {
 }
 
 .header {
-    color: white;
-    position: relative;
-    height: 100px;
-    display: flex;
+    display: grid;
+    grid-template-columns: auto auto 1fr auto;
     align-items: center;
-    justify-content: space-between;
+    color: white;
 
     a {
         color: white; text-decoration: none;
@@ -118,6 +116,8 @@ input.search {
 
 .mobile-search {
     display: none;
+    grid-row: 2;
+    grid-column: span 4;
     margin-bottom: 10px;
     margin-left: 5px;
     margin-right: 5px;
