--- a/app/components/crate-row.hbs
+++ b/app/components/crate-row.hbs
@@ -9,8 +9,8 @@
       >
         {{ @crate.name }}
       </LinkTo>
+      <span local-class="version" data-test-version>v{{@crate.max_version}}</span>
       <CrateTomlCopy @copyText='{{@crate.name}} = "{{@crate.max_version}}"' @inline={{true}} />
-      <CrateBadge @crate={{@crate}} local-class="version-badge" />
     </div>
     <div local-class="description" data-test-description>
       {{ truncate-text @crate.description }}
