--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,13 +4,10 @@
 
 <header local-class="header">
   <LinkTo @route="index" @tabindex="-1">
-    <img src="/assets/Cargo-Logo-Small.png" height="100" width="100" alt="Cargo Logo">
+    <img src="/assets/Cargo-Logo-Small.png" alt="Cargo Logo" local-class="logo">
   </LinkTo>
   <LinkTo @route="index">
-    <h1>
-      crates.io
-      <span local-class="subtitle">Rust Package Registry</span>
-    </h1>
+    <h1>crates.io</h1>
   </LinkTo>
 
   <form local-class="desktop-search-form" action='/search' {{ action "search" on="submit" }} data-test-search-form>
