application: Merge index links

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,10 +3,8 @@
 {{title "crates.io: Rust Package Registry" separator=' - ' prepend=true}}
 
 <header local-class="header">
-  <LinkTo @route="index" @tabindex="-1">
+  <LinkTo @route="index" local-class="index-link">
     <img src="/assets/Cargo-Logo-Small.png" alt="Cargo Logo" local-class="logo">
-  </LinkTo>
-  <LinkTo @route="index">
     <h1>crates.io</h1>
   </LinkTo>
 
