--- a/app/styles/application.module.css
+++ b/app/styles/application.module.css
@@ -75,7 +75,7 @@ noscript {
     composes: width-limit;
 
     display: grid;
-    grid-template-columns: auto auto 1fr auto;
+    grid-template-columns: auto 1fr auto;
     align-items: center;
     padding: 10px;
     color: white;
@@ -84,16 +84,21 @@ noscript {
         color: white; text-decoration: none;
         &:hover { color: darken(white, 15%); }
     }
+}
+
+.index-link {
+    display: flex;
+    align-items: center;
 
     h1 {
         font-size: 24px;
-        margin: 0.67em 0 0.67em 10px;
     }
 }
 
 .logo {
     width: 60px;
     height: auto;
+    margin-right: 10px;
 }
 
 .desktop-search-form {
@@ -125,7 +130,7 @@ input.search {
 .mobile-search {
     display: none;
     grid-row: 2;
-    grid-column: span 4;
+    grid-column: span 3;
     margin: 0 10px 10px;
 
     input.search {
