--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,7 +4,7 @@
 
 <header local-class="header">
   <LinkTo @route="index" local-class="index-link">
-    <img src="/assets/Cargo-Logo-Small.png" alt="Cargo Logo" local-class="logo">
+    <img src="/assets/Cargo-Logo-Small.png" role="presentation" alt="" local-class="logo">
     <h1>crates.io</h1>
   </LinkTo>
 
