category: Rethrow non-404 errors

--- a/app/templates/error.hbs
+++ b/app/templates/error.hbs
@@ -1,5 +1,5 @@
 <h1>Something Went Wrong!</h1>
-<h5>{{this.model.message}}</h5>
+<h5 data-test-error-message>{{this.model.message}}</h5>
 <pre>
   {{this.model.stack}}
 </pre>
