--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,23 +12,7 @@
   </div>
 </main>
 
-<footer local-class="footer">
-  <div local-class='after-main-links'>
-    <a href='https://doc.rust-lang.org/cargo/getting-started/installation.html'>Install</a>
-    <span local-class="sep">|</span>
-    <a href='https://doc.rust-lang.org/cargo/'>Getting Started</a>
-    <span local-class="sep">|</span>
-    <a href='https://doc.rust-lang.org/cargo/guide/'>Guide</a>
-    <span local-class="sep">|</span>
-    <a href='mailto:help@crates.io'>Send us an email</a>
-    <span local-class="sep">|</span>
-    <a href='https://www.rust-lang.org/policies/security'>Report a security issue</a>
-    <span local-class="sep">|</span>
-    <a href='https://www.rust-lang.org/policies/privacy'>Privacy notice</a>
-    <span local-class="sep">|</span>
-    <LinkTo @route="policies">Policies</LinkTo>
-  </div>
-</footer>
+<Footer/>
 
 <a href='https://github.com/rust-lang/crates.io' local-class='fork-me'>
   <img src='/assets/forkme.png' alt="Fork me on GitHub">
