--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,7 @@
 
 {{title "crates.io: Rust Package Registry" separator=' - ' prepend=true}}
 
+<PageProgress/>
 <Header/>
 
 <main local-class="main">
