Replace `{{title}}` with `{{page-title}}`

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <HeadLayout />
 
-{{title "crates.io: Rust Package Registry" separator=' - ' prepend=true}}
+{{page-title "crates.io: Rust Package Registry" separator=' - ' prepend=true}}
 
 <Header/>
 
