--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -1,4 +1,4 @@
-{{title this.crate.name}}
+{{page-title this.crate.name}}
 
 <PageHeader local-class="header" data-test-heading>
   <div local-class="header-row">
