--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -1,4 +1,4 @@
-{{title (concat "Search Results for '" this.q "'")}}
+{{page-title (concat "Search Results for '" this.q "'")}}
 
 <PageHeader
   @title="Search Results"
