Replace `{{ title }}` with `{{page-title}}`

--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -1,4 +1,4 @@
-{{ title this.category.category ' - Categories' }}
+{{page-title this.category.category ' - Categories'}}
 
 <PageHeader local-class="header">
   <LinkTo @route="categories" aria-label="Categories">{{svg-jar "crate"}}</LinkTo>
