--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -1,4 +1,4 @@
-{{ title 'Crates' }}
+{{page-title 'Crates'}}
 
 <PageHeader @title="All Crates" @suffix={{if this.letter (concat "starting with '" this.letter "'")}}/>
 
