--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -1,4 +1,4 @@
-{{ title 'Dashboard' }}
+{{page-title 'Dashboard'}}
 
 <PageHeader local-class="header">
   {{svg-jar "dashboard" local-class="header-icon"}}
