--- a/app/templates/keyword/index.hbs
+++ b/app/templates/keyword/index.hbs
@@ -1,4 +1,4 @@
-{{ title this.keyword.keyword ' - Keywords' }}
+{{page-title this.keyword.keyword ' - Keywords'}}
 
 <PageHeader @title="All Crates" @suffix="for keyword '{{this.keyword.keyword}}'"/>
 
