Replace "Loading" template with progress bar

--- a/app/styles/application.module.css
+++ b/app/styles/application.module.css
@@ -2,6 +2,7 @@
     --violet: #2e2359;
     --dark-grey: #2a3439;
     --dark-green: #3b6837;
+    --yellow: #ffc833;
 
     --header-bg-color: var(--dark-green);
     --footer-bg-color: var(--dark-green);
