--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,8 @@
 
 {{page-title "crates.io: Rust Package Registry" separator=' - ' prepend=true}}
 
+<ProgressBar/>
+
 <Header/>
 
 <main local-class="main">
