Add status page link to footer

--- a/app/components/footer.hbs
+++ b/app/components/footer.hbs
@@ -13,5 +13,7 @@
     <a href='https://www.rust-lang.org/policies/privacy'>Privacy notice</a>
     <span local-class="sep">|</span>
     <LinkTo @route="policies">Policies</LinkTo>
+    <span local-class="sep">|</span>
+    <a href='https://status.crates.io'>Status</a>
   </div>
 </footer>
