--- a/app/components/stats-value.hbs
+++ b/app/components/stats-value.hbs
@@ -1,5 +1,5 @@
 <div local-class="stats-value" ...attributes>
-  {{svg-jar @icon}}
+  {{svg-jar @icon role="img" aria-hidden="true"}}
   <span local-class="value" data-test-value>{{@value}}</span>
   <span local-class="label">{{@label}}</span>
 </div>
