--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -25,14 +25,14 @@
     <StatsValue
       @label="Downloads"
       @value={{if this.hasData (format-num this.model.num_downloads) "---,---,---"}}
-      @icon="download"
+      @icon="file-archive"
       local-class="downloads"
       data-test-total-downloads
     />
     <StatsValue
       @label="Crates in stock"
       @value={{if this.hasData (format-num this.model.num_crates) "---,---"}}
-      @icon="crate"
+      @icon="box"
       local-class="crates"
       data-test-total-crates
     />
