--- a/app/components/stats-value.module.css
+++ b/app/components/stats-value.module.css
@@ -1,24 +1,31 @@
 .stats-value {
-    display: flex;
-    align-items: center;
-
-    @media only screen and (max-width: 530px) {
-        justify-content: center;
-    }
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto auto;
+    justify-items: end;
 }
 
 .value {
-    margin-left: 10px;
     font-size: 30px;
     font-weight: bold;
+    line-height: 30px;
 }
 
 .label {
-    composes: small from '../styles/shared/typography.module.css';
-    margin-left: 10px;
+    grid-column: 1;
+    grid-row: 2;
+    color: #76838a;
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 27px;
 }
 
 .icon {
-    width: 32px;
-    height: 32px;
+    grid-column: 2;
+    grid-row: 1 / 3;
+    width: 40px;
+    height: 40px;
+    margin-left: 16px;
+    margin-top: 4px;
+    color: #76838a;
 }
