--- a/app/components/crate-toml-copy.hbs
+++ b/app/components/crate-toml-copy.hbs
@@ -1,8 +1,8 @@
 <div local-class="crate-toml-copy {{if @inline "inline" "block"}}" ...attributes>
   <CopyButton
     @clipboardText={{@copyText}}
-    @success={{action "copySuccess"}}
-    @error={{action "copyError"}}
+    @success={{perform this.showNotificationTask true}}
+    @error={{perform this.showNotificationTask false}}
     @title="Copy Cargo.toml snippet to clipboard"
   >
     {{svg-jar "copy" alt="Copy Cargo.toml snippet to clipboard"}}
