index: Add `margin-top` to the `.stats` container

--- a/app/styles/index.module.css
+++ b/app/styles/index.module.css
@@ -43,7 +43,7 @@
         flex-direction: column;
         .stats {
             border: none;
-            margin: auto;
+            margin: 32px auto 0;
         }
     }
 }
