--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,6 +3,7 @@
 {{page-title "crates.io: Rust Package Registry" separator=' - ' prepend=true}}
 
 <ProgressBar/>
+<NotificationContainer @position="top-right"/>
 
 <Header/>
 
