catch-all: Replace `FlashMessage` with regular heading

--- a/app/templates/catch-all.hbs
+++ b/app/templates/catch-all.hbs
@@ -1,4 +1,4 @@
-<FlashMessage @message="Oops, that route doesn't exist!" />
+<h1>Oops, that route doesn't exist!</h1>
 
 <p local-class='p404'>
   Perhaps a search of the site may help?
