--- a/app/components/progress-bar.module.css
+++ b/app/components/progress-bar.module.css
@@ -3,6 +3,6 @@
     left: 0;
     top: 0;
     height: 3px;
-    box-shadow: 0 0 10px rgba(0, 13, 41, 0.6);
+    box-shadow: 0 0 10px hsla(221, 100%, 8%, 0.6);
     background: var(--yellow) !important;
 }
