--- a/app/styles/categories.module.css
+++ b/app/styles/categories.module.css
@@ -12,7 +12,7 @@
 }
 
 .list {
-    background-color: white;
+    background-color: hsl(0, 0%, 100%);
     padding: 0 20px;
     margin-bottom: 20px;
 }
