--- a/app/styles/category/index.module.css
+++ b/app/styles/category/index.module.css
@@ -8,7 +8,7 @@
 }
 
 .subcategories {
-    background-color: white;
+    background-color: hsl(0, 0%, 100%);
     padding: 0 20px;
     margin-bottom: 20px;
 }
@@ -43,7 +43,7 @@
 }
 
 .list {
-    background-color: white;
+    background-color: hsl(0, 0%, 100%);
     padding: 0 20px;
     margin-bottom: 20px;
 }
