--- a/app/styles/crates.module.css
+++ b/app/styles/crates.module.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     padding: 20px;
     border-radius: 5px;
-    background-color: white;
+    background-color: hsl(0, 0%, 100%);
     margin-bottom: 40px;
 
     a {
@@ -42,7 +42,7 @@
 }
 
 .list {
-    background-color: white;
+    background-color: hsl(0, 0%, 100%);
     padding: 0 20px;
     margin-bottom: 20px;
 }
