--- a/app/styles/me/pending-invites.module.css
+++ b/app/styles/me/pending-invites.module.css
@@ -5,7 +5,7 @@
 .row {
     margin: 0;
     padding: 20px;
-    border-bottom: 2px solid #d5d3cb;
+    border-bottom: 2px solid hsl(48, 11%, 82%);
 
     &:last-of-type {
         border: none;
