--- a/app/styles/team.module.css
+++ b/app/styles/team.module.css
@@ -38,7 +38,7 @@
 }
 
 .list {
-    background-color: white;
+    background-color: hsl(0, 0%, 100%);
     padding: 0 20px;
     margin-bottom: 20px;
 }
