--- a/app/styles/user.module.css
+++ b/app/styles/user.module.css
@@ -19,7 +19,7 @@
 }
 
 .list {
-    background-color: white;
+    background-color: hsl(0, 0%, 100%);
     padding: 0 20px;
     margin-bottom: 20px;
 }
